--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql-tools": "^2.21.0",
     "pg": "^7.4.1",
     "pg-promise": "^8.1.1",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
