--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@
 # production
 /build
 
+# development
+.editorconfig
+.prettierrc
+.stylelintrc.js
+nodemon.json
+
 # misc
 .DS_Store
 .env.sh
@@ -16,6 +22,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
 
 npm-debug.log*
 yarn-debug.log*
