--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
     "graphql-tag": "^2.8.0",
     "graphql-tools": "^2.21.0",
     "pg": "^7.4.1",
-    "pg-promise": "^8.1.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "styled-components": "^3.2.0"
+    "styled-components": "^3.2.0",
+    "twitter": "^1.7.1"
   },
   "scripts": {
     "start": "npm-run-all -p start:server start:client",
     "start:client": "react-scripts start",
     "start:server": "source .env.sh && nodemon server",
+    "lint:css": "stylelint './src/**/*.js'",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
@@ -40,7 +42,14 @@
     "chalk": "^2.3.2",
     "inline-import": "^1.0.0",
     "nodemon": "^1.17.1",
-    "npm-run-all": "^4.1.2"
+    "npm-run-all": "^4.1.2",
+    "prettier": "^1.11.1",
+    "prettier-stylelint": "^0.4.2",
+    "stylelint": "^9.1.3",
+    "stylelint-config-prettier": "^3.0.4",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.3.1"
   },
   "proxy": {
     "/graphql": {
