--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "eli9000-v3",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://eli9000.github.io/eli9000-v3",
   "dependencies": {
     "apollo-boost": "^0.1.2",
     "apollo-server-express": "^1.3.2",
