--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "graphql": "^0.13.1",
     "graphql-tag": "^2.8.0",
     "graphql-tools": "^2.21.0",
+    "npm": "^6.1.0",
     "pg": "^7.4.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
@@ -29,7 +30,9 @@
     "lint:css": "stylelint './src/**/*.js'",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -41,6 +44,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.18.2",
     "chalk": "^2.3.2",
+    "gh-pages": "^1.1.0",
     "inline-import": "^1.0.0",
     "nodemon": "^1.17.1",
     "npm-run-all": "^4.1.2",
