--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "eli9000-v3",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://eli9000.github.io/eli9000-v3",
   "dependencies": {
     "apollo-boost": "^0.1.2",
     "apollo-server-express": "^1.3.2",
@@ -24,15 +23,12 @@
     "twitter": "^1.7.1"
   },
   "scripts": {
-    "start": "npm-run-all -p start:server start:client",
-    "start:client": "react-scripts start",
+    "start": "react-scripts start",
     "start:server": "source .env.sh && nodemon server",
     "lint:css": "stylelint './src/**/*.js'",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
