--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "eli9000-v3",
-  "version": "0.1.0",
+  "name": "eli9000",
+  "version": "0.4.0",
   "description": "Portfolio page",
   "private": true,
   "author": {
