--- a/package.json
+++ b/package.json
@@ -12,11 +12,20 @@
     "type": "git",
     "url": "https://github.com/eli9000/eli9000-v3.git"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "start:server": "nodemon server",
+    "lint:css": "stylelint './src/**/*.js'",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "apollo-boost": "^0.1.2",
     "apollo-server-express": "^1.3.2",
     "axios": "^0.18.0",
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.8.0",
@@ -31,14 +40,6 @@
     "react-scripts": "1.1.1",
     "styled-components": "^3.2.0",
     "twitter": "^1.7.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "start:server": "source .env.sh && nodemon server",
-    "lint:css": "stylelint './src/**/*.js'",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
