--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "graphql": "^0.13.1",
     "graphql-tag": "^2.8.0",
     "graphql-tools": "^2.21.0",
-    "npm": "^6.1.0",
+    "npm": "^6.3.0",
     "pg": "^7.4.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^1.1.4",
     "styled-components": "^3.2.0",
     "twitter": "^1.7.1"
   },
@@ -53,11 +53,11 @@
     "chalk": "^2.3.2",
     "gh-pages": "^1.1.0",
     "inline-import": "^1.0.0",
-    "nodemon": "^1.17.1",
+    "nodemon": "^1.18.3",
     "npm-run-all": "^4.1.2",
     "prettier": "^1.11.1",
     "prettier-stylelint": "^0.4.2",
-    "stylelint": "^9.1.3",
+    "stylelint": "^9.4.0",
     "stylelint-config-prettier": "^3.0.4",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-config-styled-components": "^0.1.1",
